[package]
name = "rust-api-test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
warp = "0.3.7"
